<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Estudiante">

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_Nombre"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_Codigo"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtMateria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_Materia"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtPrimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_Primer"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtSegundo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_Segundo"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtTercer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edt_Tercer"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/btn_Guardar" />
</LinearLayout>